00_backup/eksdev/core/kis-api/kis-online-api-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: kis-online-api
  namespace: core
  labels:
    app: kis-online-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kis-online-api
  template:
    metadata:
      labels:
        app: kis-online-api
      annotations:
        actuator.prometheus.io.path: /actuator/prometheus
        actuator.prometheus.io.port: '8080'
        actuator.prometheus.io.scrape: 'true'
    spec:
      volumes:
        - emptyDir: {}
          name: agent-dir
        - name: kis-online-api-ins-data-kis
          persistentVolumeClaim:
            claimName: kis-online-api-ins-data-kis
        - name: kis-online-api-ins-data-fep
          persistentVolumeClaim:
            claimName: kis-online-api-ins-data-fep

      containers:
        - name: kis-online-api
          image: >-
            857616209275.dkr.ecr.ap-northeast-2.amazonaws.com/core/kis-online-api:eksdev
            #          resources:
            #            requests:
            #              cpu: "1"
            #              memory: "6Gi"

          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          volumeMounts:
            - mountPath: /scouter-agent
              name: agent-dir
            - mountPath: /ins_data_kis
              name: kis-online-api-ins-data-kis
            - mountPath: /ins_data_fep
              name: kis-online-api-ins-data-fep
          imagePullPolicy: Always
      restartPolicy: Always
      nodeSelector:
        eks.amazonaws.com/nodegroup: sk-dev-eks-core-worker-node
