00_backup/eksdev/core/kis-api/kis-online-api-svc-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: kis-online-api
  namespace: core
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: kis-online-api
  type: ClusterIP
